<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataShowromQodri</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_SpesifikasiMobil">Tambah List Spesfikasi Mobil</string>
    <string name="add_HargaMobil">Tambah List Harga Mobil</string>
    <string name="add_DaftarHargaMobil">Membuat Daftar Harga Mobil</string>
    <string name="no">No</string>
    <string name="fakta">Spesifikasi Mobil</string>
    <string name="add">Add (+)</string>
    <string name="update">Update (!)</string>
    <string name="delete1">Delete berdasarkan ID</string>
    <string name="delete2">Delete semua tabel / data</string>
    <string name="spesifikasimobil_add">Contoh inputan : Avanza, Hitam,  MT, 2010, Bensin, Dll</string>
    <string name="spesifikasimobil_update">Masukkan edit/update/perbaharuan spesifikasi mobilnya</string>
    <string name="spesifikasimobil_awal"># Tambahkan Spesifikasi Mobil Disini</string>
    <string name="spesifikasimobil_tengah"># Fitur Memperbaharui Nilai Berdasarkan ID</string>
    <string name="spesifikasimobil_akhir"># Fitur Menghapus Data Berdasarkan ID</string>
    <string name="spesifikasimobil_listdata"># List Data Spesifikasi Mobil Pada ShowRoom :</string>
    
    <string name="HargaMobil_add">Contoh inputan : Rp.120.000.000</string>
    <string name="HargaMobil_update">Masukkan edit/update/perbaharuan harga mobilnya disini</string>
    <string name="HargaMobil_awal"># Tambahkan Harga Mobil Disini</string>
    <string name="HargaMobil_tengah"># Fitur Memperbaharui Nilai Berdasarkan ID</string>
    <string name="HargaMobil_akhir"># Fitur Menghapus Data Berdasarkan ID</string>
    <string name="HargaMobil_listdata"># List Data Harga Mobil Pada ShowRoom :</string>
    
    
    

</resources>
